# CartesianGP

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h
CLan/: memory.c  memory.h
src/: cgp.c  cgp.h  chromosome.c  chromosome.h  dataset.c  dataset.h  functionset.c  functionset.h  node.c  node.h  parameters.c  parameters.h  results.c  results.h  util.c  util.h
src/constants/: constants.h
src/fitness/: fitness.c  fitness.h
src/functions/: functions.c  functions.h
src/machinelearning/: evaluator.c  evaluator.h
src/math/: lialg.c  lialg.h
src/mutation/: mutation.c  mutation.h
src/reproduction/: reproduction.c  reproduction.h
src/selection/: selection.c  selection.h
src/stream/: stream.c  stream.h
src/stream/impl/: BCWStreamImpl.c  BCWStreamImpl.h  DIPHCDStreamImpl.c  DIPHCDStreamImpl.h  GenericStreamImpl.c  GenericStreamImpl.h  ParametersStreamImpl.c  ParametersStreamImpl.h  SCAStreamImpl.c  SCAStreamImpl.h
